<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="website">www.udacity.com</string>
    <string name="business_name">Udacity</string>
    <string name="company_address">2465 Latham St, Mountain View, CA 94043</string>
    <string name="phone_number">650-555-5555</string>
    <string name="facebook">www.facebook.com/Udacity/</string>
    <string name="twitter">www.twitter.com/udacity/</string>
    <string name="background_image">Background Image (Large city at night)</string>
    <string name="main_image">Main Image (\'Do What Is Great\' graphic)</string>
    <string name="logo">Udacity Logo</string>
</resources>
